# garbled-text-generator

./: .gitignore  pyproject.toml
src/: main.py
